--- a/framework/source/resource/qx/mobile/css/indigo.css
+++ b/framework/source/resource/qx/mobile/css/indigo.css
@@ -1861,7 +1861,7 @@ li:first-child a {
   position: absolute;
   width: auto;
   padding: 6px;
-  z-index: 99;
+  z-index: 101;
   clear: both;
 }
 .popupAnchorPointerTop:before {
