--- a/framework/source/resource/qx/mobile/less/basic/_popup.less
+++ b/framework/source/resource/qx/mobile/less/basic/_popup.less
@@ -7,7 +7,7 @@
   position: absolute;
   width: auto;
   padding: 6px;
-  z-index: 99;
+  z-index: 101;
   clear: both;
 }
 
